--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Weather Pro by Coder Foundry</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/uwe4jcq.css">
 
