refactor code for tutorial

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/uwe4jcq.css">
 
+    <!--Fav icon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="manifest" href="/images/site.webmanifest">
+    <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <!--End Fav icon-->
+
     <script src="keys.js"></script>
     <script src="weather.js"></script>
     <!-- Bootstrap CSS -->
@@ -18,7 +28,7 @@
 
 <body onload="initGeolocation();">
     <div class="wpBackground">
-        <div class="d-flex flex-column  h-100">
+        <div class="d-flex flex-column h-100">
             <div id="wpMain" class="container">
                 <div class="row">
                     <div id="wpTitle" class="col text-center">
@@ -80,8 +90,6 @@
                                 </table>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
                 <div class="row">
@@ -94,10 +102,6 @@
                                 <a href="https:\\coderfoundry.com" target="_blank">Learn To Code at Coder Foundry</a>
                             </div>
                         </div>
-
-                        <div id="lat"></div>
-                        <div id="long"></div>
-                        <div id="icon"></div>
                     </div>
                 </div>
             </div>
